# rust-ascii-rendering-engine

./: Cargo.toml  README.md
src/: ascii_converter.rs  main.rs  video_extraction.rs
src/video_extraction/: frame.rs  reader.rs
