[package]
name = "ascii-rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
ffmpeg-next = "7.1.0"
image = "0.25.5"
